Outliner Renaming Double Click Error #104722

Closed
opened 2023-02-13 23:45:44 +01:00 by Robert Moats · 8 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 517.48

Blender Version
Broken: version: 3.2.2, branch: master, commit date: 2022-08-02 18:15, hash: rBbcfdb14560e7
Worked: (newest version of Blender that worked as expected)

Short description of error
Cannot activate rename while rename is already active on another element.

Long description of error
After activating rename on an element in the outliner, when the text box is currently active on any element, if the user double clicks ANY OTHER element, Blender refuses to change the text box to the newly clicked element, and keeps activating it on the original element again and again. It doesn't seem to matter how many times you double click new elements - Blender will keep reactivating the rename box on the first element.

I think this is related to the fact that you cannot select an object in the outliner while the rename box is active. If you click an element in the outliner while rename is active, it doesn't get selected. It only closes the rename box. So when the user double clicks, Blender sees it as "close rename box, start rename" rather than "close rename box, select element, start rename".

Exact steps for others to reproduce the error

  1. In outliner area press F2
  2. Double click any other element in the outliner while the rename box is still active on the first.
  3. repeat #2 on any number of elements.

Outliner renaming is broken until file is reopened.

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 517.48 **Blender Version** Broken: version: 3.2.2, branch: master, commit date: 2022-08-02 18:15, hash: `rBbcfdb14560e7` Worked: (newest version of Blender that worked as expected) **Short description of error** Cannot activate rename while rename is already active on another element. **Long description of error** After activating rename on an element in the outliner, when the text box is currently active on any element, if the user double clicks ANY OTHER element, Blender refuses to change the text box to the newly clicked element, and keeps activating it on the original element again and again. It doesn't seem to matter how many times you double click new elements - Blender will keep reactivating the rename box on the first element. I think this is related to the fact that you cannot select an object in the outliner while the rename box is active. If you click an element in the outliner while rename is active, it doesn't get selected. It only closes the rename box. So when the user double clicks, Blender sees it as "close rename box, start rename" rather than "close rename box, select element, start rename". **Exact steps for others to reproduce the error** 1. In outliner area press F2 2. Double click any other element in the outliner while the rename box is still active on the first. 3. repeat #2 on any number of elements. Outliner renaming is broken until file is reopened.
Robert Moats added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-02-13 23:45:45 +01:00

I can't reproduce this issue, can you provide .blend file and perhaps short video?

I can't reproduce this issue, can you provide .blend file and perhaps short video?
Richard Antalik added
Status
Needs Information from User
and removed
Status
Needs Triage
labels 2023-02-14 00:04:47 +01:00
Author

It's definitely not a specific blend file, because it happens with any/every file I can open, including the default scene.

It's possible I just didn't describe the reproduction steps very well, or didn't explain the situation well. Try this:

  1. Select an element in the outliner (click it).
  2. With your cursor still hovering the outliner, press F2. This will open a renaming text box for the item.
  3. Without closing the rename box (leave it open), double click any item in the outliner. Instead of starting a new rename action on the new item, it will keep activating rename on the first item, again and again, every time you double click.

Using F2 is just another way to illustrate the problem. It happens any time you try to rename multiple items, regardless of how you start the renaming action. The user is forced to "deactivate" the renaming box by pressing enter or clicking somewhere outside of it before trying to rename a second item.

It's definitely not a specific blend file, because it happens with any/every file I can open, including the default scene. It's possible I just didn't describe the reproduction steps very well, or didn't explain the situation well. Try this: 1. Select an element in the outliner (click it). 2. With your cursor still hovering the outliner, press F2. This will open a renaming text box for the item. 3. Without closing the rename box (leave it open), double click any item in the outliner. Instead of starting a new rename action on the new item, it will keep activating rename on the first item, again and again, every time you double click. Using F2 is just another way to illustrate the problem. It happens any time you try to rename multiple items, regardless of how you start the renaming action. The user is forced to "deactivate" the renaming box by pressing enter or clicking somewhere outside of it before trying to rename a second item.
Author

Here is a recording showing the situation. As a side note, it is also impossible to activate rename on a second item by doing "click first item, F2, click second item, F2", etc. It will result in the same type of issue.

The problem stems from the fact that Blender ignores your clicks while rename is active. It just uses that click to close the rename box.

When that ignored click becomes part of a double click, Blender ignores the first, but still responds to the second with a double click action, which doesn't really make sense. It ends up reactivating rename on the same item, even if the user triple clicks.

Here is a recording showing the situation. As a side note, it is also impossible to activate rename on a second item by doing "click first item, F2, click second item, F2", etc. It will result in the same type of issue. The problem stems from the fact that Blender ignores your clicks while rename is active. It just uses that click to close the rename box. When that ignored click becomes part of a double click, Blender ignores the first, but still responds to the second with a double click action, which doesn't really make sense. It ends up reactivating rename on the same item, even if the user triple clicks.

Thanks for info. Still can't reproduce. Please check if this happens with alpha build from https://builder.blender.org/download/daily/. Also click on Help > Save System Info and upload saved file.

Thanks for info. Still can't reproduce. Please check if this happens with alpha build from https://builder.blender.org/download/daily/. Also click on Help > Save System Info and upload saved file.
Author

Yeah, it still happens with Alpha 3.6, with default add-ons. I also get identical behavior on both of my PCs (one an Alienware laptop Pentium, the other AMD Ryzen, both NVidia and Windows 10).

When I open Blender and create a new file, it works correctly at first. But then as soon as I use F2 to start the rename, the behavior in the recording starts happening, and I can't seem to get it to return to the previous state where it works normally. I did not notice the behavior starts normally before or would have mentioned that. Its possible there is something triggering the change in behavior.

If I start a new document (file > new > general), it resets to the correct behavior until I press F2 again. And the problem only happens if I press F2 while hovering the outliner. If my cursor is over the 3D environment when I press F2, the rename box opens outside of the outliner and the weird behavior does not start. However, once the weird behavior does start, pressing F2 outside of the outliner does not restore the correct behavior.

I'm not sure if F2 vs double click will lead to the cause, but F2 seems to be the only way I can get the odd behavior to start now.

I attached system info for both of my computers.

Yeah, it still happens with Alpha 3.6, with default add-ons. I also get identical behavior on both of my PCs (one an Alienware laptop Pentium, the other AMD Ryzen, both NVidia and Windows 10). When I open Blender and create a new file, it works correctly at first. But then as soon as I use F2 to start the rename, the behavior in the recording starts happening, and I can't seem to get it to return to the previous state where it works normally. I did not notice the behavior starts normally before or would have mentioned that. Its possible there is something triggering the change in behavior. If I start a new document (file > new > general), it resets to the correct behavior until I press F2 again. And the problem only happens if I press F2 while hovering the outliner. If my cursor is over the 3D environment when I press F2, the rename box opens outside of the outliner and the weird behavior does not start. However, once the weird behavior *does* start, pressing F2 outside of the outliner does not restore the correct behavior. I'm not sure if F2 vs double click will lead to the cause, but F2 seems to be the only way I can get the odd behavior to start now. I attached system info for both of my computers.
Author

Under hotkeys, the command outliner.item_rename (key F2) has a toggle Use active. If I uncheck this, the problem goes away even after being started in a document. My guess is the behavior of this toggle option is taking over the double click renaming behavior once it activates.

By the way, if you manually force Use Active to false for outliner.item_rename (double click), it also fixes the issue, even if Use Active is true for F2. So apparently the double click action inherits the toggle from F2 once F2 is activated, unless the user manually specifies Use Active as false for it. I would definitely recommend defaulting the double click rename Use Active to false to prevent this behavior. Easy fix :)

Under hotkeys, the command **outliner.item_rename** (key F2) has a toggle **Use active**. If I uncheck this, the problem goes away even after being started in a document. My guess is the behavior of this toggle option is taking over the double click renaming behavior once it activates. By the way, if you manually force **Use Active** to **false** for **outliner.item_rename** (double click), it also fixes the issue, even if **Use Active** is true for F2. So apparently the double click action inherits the toggle from F2 once F2 is activated, unless the user manually specifies **Use Active** as false for it. I would definitely recommend defaulting the double click rename **Use Active** to false to prevent this behavior. Easy fix :)

I can reproduce when using F2 key. I guess operator is not explicitly specifying that unset use_active means ~use_active

I can reproduce when using F2 key. I guess operator is not explicitly specifying that unset `use_active` means `~use_active`
Richard Antalik added
Module
User Interface
Status
Confirmed
and removed
Status
Needs Information from User
labels 2023-03-02 18:40:08 +01:00

@CodeRunner I think you are correct and I made a simple fix. Before renaming the item I add a line of code to check if it's double click or not. Now it works normally as expected. I'll create a pull request later.

@CodeRunner I think you are correct and I made a simple fix. Before renaming the item I add a line of code to check if it's double click or not. Now it works normally as expected. I'll create a pull request later.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-05-01 11:04:04 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#104722
No description provided.