Fix #104722: Outliner Renaming Double Click Error